lite-logger/log-management/objects/LoggerSettings__c/LoggerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Opinionated LiteLogger settings. Org / profile / user hierarchy. Sensible defaults out of the box - no CMDT sprawl.</description>
    <label>Logger Settings</label>
</CustomObject>