lite-logger/log-management/objects/LoggerSettings__c/fields/ApplyDataMasking__c.field-meta.xml
<CustomField>
    <fullName>ApplyDataMasking__c</fullName>
    <label>ApplyDataMasking</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>