lite-logger/log-management/objects/LoggerSettings__c/fields/ColdTierRetentionDays__c.field-meta.xml
<CustomField>
    <fullName>ColdTierRetentionDays__c</fullName>
    <label>ColdTierRetentionDays</label>
    <defaultValue>90</defaultValue>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>