lite-logger/log-management/objects/LoggerSettings__c/fields/HotTierRetentionDays__c.field-meta.xml
<CustomField>
    <fullName>HotTierRetentionDays__c</fullName>
    <label>HotTierRetentionDays</label>
    <defaultValue>7</defaultValue>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>