lite-logger/log-management/objects/LoggerSettings__c/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <label>IsEnabled</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>