lite-logger/log-management/objects/LoggerSettings__c/fields/LoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>LoggingLevel__c</fullName>
    <label>LoggingLevel</label>
    <defaultValue>&quot;INFO&quot;</defaultValue>
    <length>20</length>
    <type>Text</type>
</CustomField>