lite-logger/log-management/objects/LoggerSettings__c/fields/StoreInHotTier__c.field-meta.xml
<CustomField>
    <fullName>StoreInHotTier__c</fullName>
    <label>StoreInHotTier</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>